--- a/22_ejs_challenge/views/home.ejs
+++ b/22_ejs_challenge/views/home.ejs
@@ -2,5 +2,11 @@
 <h1>HOME</h1>
 
 <p><%= startingContent %></p>
+<div>
+    <% posts.forEach(post => {  %>
+    <h1><%= post.title %></h1>
+    <p><%= post.body %></p>
+    <% }); %>
+</div>
 
 <%- include('partials/footer'); -%>
