--- a/27. Putting Everything Together/views/list.ejs
+++ b/27. Putting Everything Together/views/list.ejs
@@ -8,25 +8,16 @@
   <% newListItems.forEach(function (item) { %>
   <form action="/delete" method="POST">
     <div class="item">
-      <input
-        type="checkbox"
-        name="checkbox"
-        value="<%=item._id%>"
-        onchange="this.form.submit()"
-      />
+      <input type="checkbox" name="checkbox" value="<%=item._id%>" onchange="this.form.submit()" />
       <p><%= item.name %></p>
     </div>
-    <% }) %>
+    <input type="hidden" name="listName" value="<%= listTitle %>"></input>
   </form>
+  <% }) %>
 
   <form class="item" action="/" method="post">
-    <input
-      type="text"
-      name="newItem"
-      placeholder="New Item"
-      autocomplete="off"
-    />
-    <button type="submit" name="list">+</button>
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off" />
+    <button type="submit" name="list" value="<%=listTitle%>">+</button>
   </form>
 </div>
 
